Refactor code with common entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,10 +32,15 @@ packages = find:
 setup_requires = wheel
 install_requires = 
 	wheel
+	coloredlogs
 
 [options.packages.find]
 where = src
 exclude = tests
+
+[options.entry_points]
+console_scripts =
+    aoc2021 = aoc2021.__main__:main
 
 [tool:pytest]
 testpaths = src/tests
@@ -59,8 +64,3 @@ concurrency = thread
 disable_warnings = no-data-collected
 branch = True
 omit = src/tests/*
-
-[options.entry_points]
-console_scripts = 
-	trm-stb = trm_server_stb.__main__:main
-
