--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
     ],
     "cSpell.words": [
         "venv",
-        "capsys"
+        "capsys",
+        "arange"
     ],
     "editor.formatOnSave": true,
     "cSpell.enableFiletypes": [
